work for textarea component enhancement - update angular component

--- a/packages/survey-angular-ui/src/components/text-area/text-area.component.html
+++ b/packages/survey-angular-ui/src/components/text-area/text-area.component.html
@@ -1,3 +1,4 @@
+<ng-template #template>
 <textarea
 [readonly]="model.isReadOnlyAttr"
 [disabled]="model.isDisabledAttr"
@@ -21,3 +22,4 @@
 [attr.aria-errormessage]="model.ariaErrormessage"
 [style.resize]="model.question.resizeStyle"
 #contentElement></textarea>
+</ng-template>
