--- a/packages/survey-core/src/common-styles/sv-ranking.scss
+++ b/packages/survey-core/src/common-styles/sv-ranking.scss
@@ -123,12 +123,13 @@
   line-height: multiply(1.5, $font-editorfont-size);
   margin: 0 calcSize(2);
   overflow-wrap: break-word;
-  word-break: break-all;
+  word-break: normal;
   align-self: self-start;
   padding-top: calcSize(1);
   padding-bottom: calcSize(1);
 
-  .sv-string-viewer {
+  .sv-string-viewer,
+  .sv-string-editor {
     overflow: initial;
     white-space: pre-line;
   }
@@ -178,7 +179,8 @@
 .sv-ranking-item--ghost {
   height: calcSize(6);
 
-  .sv-ranking-item__text .sv-string-viewer {
+  .sv-ranking-item__text .sv-string-viewer,
+  .sv-ranking-item__text .sv-string-editor {
     white-space: unset;
   }
 }
@@ -282,7 +284,9 @@
     height: calcSize(6);
 
     .sv-ranking-item__text {
-      .sv-string-viewer {
+
+      .sv-string-viewer,
+      .sv-string-editor {
         overflow: hidden;
         white-space: nowrap;
       }
