resolve #8827 Dropdown item labels are misaligned in RTL

--- a/packages/survey-core/src/common-styles/sv-list.scss
+++ b/packages/survey-core/src/common-styles/sv-list.scss
@@ -53,7 +53,7 @@
   line-height: calcLineHeight(1.5);
   cursor: pointer;
   overflow: hidden;
-  text-align: left;
+  text-align: start;
   text-overflow: ellipsis;
   white-space: nowrap;
   transition:
