--- a/src/modern/blocks/sv-tagbox.scss
+++ b/src/modern/blocks/sv-tagbox.scss
@@ -71,7 +71,7 @@
   max-width: 100%;
   width: auto;
   height: 100%;
-  text-align: left;
+  text-align: start;
   cursor: text;
   pointer-events: none;
   color: var(--main-hover-color, $main-hover-color);
