--- a/packages/survey-core/src/common-styles/sv-popup.scss
+++ b/packages/survey-core/src/common-styles/sv-popup.scss
@@ -28,31 +28,18 @@ sv-popup {
   height: 0;
 }
 
-.sv-popup-inner > .sv-popup__container {
-  margin-top: calcSize(-1);
-}
-
-.sv-list__item--with-icon .sv-popup-inner > .sv-popup__container {
-  margin-top: calcSize(-0.5);
-}
-
 .sv-popup__container {
   background-color: $background-dim;
-  box-shadow: $shadow-large;
+  box-shadow: $shadow-medium, $shadow-large;
   border-radius: calcCornerRadius(1);
   position: absolute;
   padding: 0;
 }
 
-.sv-popup__shadow {
-  width: 100%;
-  height: 100%;
-  border-radius: calcCornerRadius(1);
-}
-
 .sv-popup__body-content {
   background-color: $background;
   border-radius: calcCornerRadius(1);
+  gap: calcSize(4);
 
   width: 100%;
   height: 100%;
@@ -78,25 +65,16 @@ sv-popup {
   display: flex;
 }
 
-.sv-popup--modal > .sv-popup__container > .sv-popup__shadow > .sv-popup__body-content {
-  box-shadow: $shadow-large;
+.sv-popup--modal > .sv-popup__container > .sv-popup__body-content {
   background-color: $background-dim-light;
   padding: calcSize(4);
   height: auto;
-
-  .sv-popup__body-footer {
-    padding-bottom: 2px;
-  }
 }
 .sv-popup--modal .sv-popup__body-footer .sv-footer-action-bar {
   overflow: visible;
 }
 
 .sv-popup--confirm-delete {
-  .sv-popup__shadow {
-    height: initial;
-  }
-
   .sv-popup__container {
     border-radius: calcSize(1);
   }
@@ -110,7 +88,6 @@ sv-popup {
 
   .sv-popup__body-header {
     color: $font-editorfont-color;
-    margin-bottom: 0;
     align-self: self-start;
 
     /* UI/Default */
@@ -156,17 +133,12 @@ sv-popup {
     max-width: 100vw;
     border-radius: calcCornerRadius(4) calcCornerRadius(4) 0px 0px;
     background: $background;
-    box-shadow: $shadow-large;
     padding: calcSize(3) calcSize(2) calcSize(2);
     height: calc(100% - calc(1 * #{$base-unit}));
   }
 
   .sv-popup__scrolling-content {
     height: calc(100% - (10 * var(--base-unit, 8px)));
-  }
-
-  .sv-popup__body-footer {
-    margin-top: calcSize(2);
   }
 
   .sv-popup__body-footer .sv-action-bar {
@@ -274,21 +246,15 @@ sv-popup {
   line-height: calcLineHeight(2);
   font-style: normal;
   font-weight: 700;
-  margin-bottom: calcSize(2);
   color: $foreground;
 }
 
 .sv-popup__body-footer {
   display: flex;
-  margin-top: calcSize(4);
 }
 
 .sv-popup__body-footer .sv-action-bar {
   gap: calcSize(1.5);
-}
-
-.sv-popup__button {
-  margin: calcSize(0.25);
 }
 
 .sv-popup--modal,
@@ -307,10 +273,6 @@ sv-popup {
     margin-bottom: calcSize(1);
   }
 
-  .sv-popup__shadow {
-    box-shadow: $shadow-medium;
-  }
-
   .sv-popup__body-content {
     background-color: $background;
     padding: calcSize(1) 0;
@@ -318,7 +280,7 @@ sv-popup {
   }
 }
 
-.sv-popup--dropdown > .sv-popup__container > .sv-popup__shadow > .sv-popup__body-content .sv-list {
+.sv-popup--dropdown > .sv-popup__container > .sv-popup__body-content .sv-list {
   background-color: transparent;
 }
 
@@ -361,7 +323,6 @@ sv-popup {
     box-shadow: none;
     padding: calcSize(0.5) calcSize(2);
     border-radius: calcSize(12.5);
-    margin: 0;
   }
 
   .sv-popup__container {
@@ -376,7 +337,6 @@ sv-popup {
 
   .sv-popup__body-footer {
     background-color: $background-dim;
-    margin-top: 0;
     padding-top: calcSize(1);
     padding-bottom: calcSize(1);
     border-top: 1px solid $border-light;
@@ -538,7 +498,6 @@ sv-popup {
     max-width: var(--sv-popup-overlay-max-width);
     border-radius: calcCornerRadius(1);
     overflow: hidden;
-    margin: 0;
   }
 
   .sv-popup__content,
