#8834 Multi-Select Matrix with the alternateRows: true - A selected checkbox item has a solid fill within odd rows Fixes #8834

--- a/packages/survey-core/src/defaultV2-theme/blocks/sd-table.scss
+++ b/packages/survey-core/src/defaultV2-theme/blocks/sd-table.scss
@@ -166,7 +166,9 @@
           &.sd-item--checked .sd-item__decorator {
             background-color: $primary;
           }
-
+          &.sd-item--checked .sd-item__control:focus + .sd-item__decorator{
+            background-color: var(--sjs-general-backcolor, var(--background, #fff));
+          }
           &.sd-item--readonly.sd-item--checked .sd-item__decorator {
             background-color: $background;
           }
@@ -174,7 +176,6 @@
           &.sd-item--preview.sd-item--preview .sd-item__decorator {
             background-color: transparent;
           }
-
           &.sd-radio--checked .sd-radio__control:focus + .sd-radio__decorator:after {
             background-color: $primary-foreground;
           }
