--- a/packages/survey-core/src/common-styles/sv-popup.scss
+++ b/packages/survey-core/src/common-styles/sv-popup.scss
@@ -38,16 +38,10 @@ sv-popup {
 
 .sv-popup__container {
   background-color: $background-dim;
-  box-shadow: $shadow-large;
+  box-shadow: $shadow-medium, $shadow-large;
   border-radius: calcCornerRadius(1);
   position: absolute;
   padding: 0;
-}
-
-.sv-popup__shadow {
-  width: 100%;
-  height: 100%;
-  border-radius: calcCornerRadius(1);
 }
 
 .sv-popup__body-content {
@@ -78,25 +72,17 @@ sv-popup {
   display: flex;
 }
 
-.sv-popup--modal > .sv-popup__container > .sv-popup__shadow > .sv-popup__body-content {
-  box-shadow: $shadow-large;
+.sv-popup--modal > .sv-popup__container > .sv-popup__body-content {
   background-color: $background-dim-light;
   padding: calcSize(4);
   height: auto;
-
-  .sv-popup__body-footer {
-    padding-bottom: 2px;
-  }
+  gap: calcSize(4);
 }
 .sv-popup--modal .sv-popup__body-footer .sv-footer-action-bar {
   overflow: visible;
 }
 
 .sv-popup--confirm-delete {
-  .sv-popup__shadow {
-    height: initial;
-  }
-
   .sv-popup__container {
     border-radius: calcSize(1);
   }
@@ -110,7 +96,6 @@ sv-popup {
 
   .sv-popup__body-header {
     color: $font-editorfont-color;
-    margin-bottom: 0;
     align-self: self-start;
 
     /* UI/Default */
@@ -127,7 +112,6 @@ sv-popup {
   }
 
   .sv-popup__body-footer {
-    padding-bottom: 0;
     max-width: max-content;
 
     .sv-action-bar {
@@ -148,6 +132,7 @@ sv-popup {
     width: 100%;
     padding-top: calcSize(2);
     border: unset;
+    box-shadow: unset;
     box-sizing: content-box;
   }
 
@@ -156,17 +141,12 @@ sv-popup {
     max-width: 100vw;
     border-radius: calcCornerRadius(4) calcCornerRadius(4) 0px 0px;
     background: $background;
-    box-shadow: $shadow-large;
     padding: calcSize(3) calcSize(2) calcSize(2);
     height: calc(100% - calc(1 * #{$base-unit}));
   }
 
   .sv-popup__scrolling-content {
     height: calc(100% - (10 * var(--base-unit, 8px)));
-  }
-
-  .sv-popup__body-footer {
-    margin-top: calcSize(2);
   }
 
   .sv-popup__body-footer .sv-action-bar {
@@ -177,16 +157,14 @@ sv-popup {
     width: 100%;
   }
 
+  .sv-popup__body-footer .sv-action {
+    flex: 1 0 0;
+  }
+
   .sv-popup__button.sv-popup__button {
     background-color: $primary;
     border: 2px solid $primary;
     color: $primary-foreground;
-  }
-}
-
-.sv-popup--overlay {
-  .sv-popup__body-footer .sv-action {
-    flex: 1 0 0;
   }
 }
 
@@ -274,21 +252,15 @@ sv-popup {
   line-height: calcLineHeight(2);
   font-style: normal;
   font-weight: 700;
-  margin-bottom: calcSize(2);
   color: $foreground;
 }
 
 .sv-popup__body-footer {
   display: flex;
-  margin-top: calcSize(4);
 }
 
 .sv-popup__body-footer .sv-action-bar {
   gap: calcSize(1.5);
-}
-
-.sv-popup__button {
-  margin: calcSize(0.25);
 }
 
 .sv-popup--modal,
@@ -307,10 +279,6 @@ sv-popup {
     margin-bottom: calcSize(1);
   }
 
-  .sv-popup__shadow {
-    box-shadow: $shadow-medium;
-  }
-
   .sv-popup__body-content {
     background-color: $background;
     padding: calcSize(1) 0;
@@ -318,7 +286,7 @@ sv-popup {
   }
 }
 
-.sv-popup--dropdown > .sv-popup__container > .sv-popup__shadow > .sv-popup__body-content .sv-list {
+.sv-popup--dropdown > .sv-popup__container > .sv-popup__body-content .sv-list {
   background-color: transparent;
 }
 
@@ -335,6 +303,7 @@ sv-popup {
 .sv-popup--overlay {
   .sv-popup__body-content {
     background-color: $background-dim;
+    gap: calcSize(2);
   }
 }
 
@@ -361,7 +330,6 @@ sv-popup {
     box-shadow: none;
     padding: calcSize(0.5) calcSize(2);
     border-radius: calcSize(12.5);
-    margin: 0;
   }
 
   .sv-popup__container {
@@ -372,11 +340,11 @@ sv-popup {
 
   .sv-popup__body-content {
     height: calc(var(--sv-popup-overlay-height, 100vh));
+    gap: 0;
   }
 
   .sv-popup__body-footer {
     background-color: $background-dim;
-    margin-top: 0;
     padding-top: calcSize(1);
     padding-bottom: calcSize(1);
     border-top: 1px solid $border-light;
@@ -538,7 +506,7 @@ sv-popup {
     max-width: var(--sv-popup-overlay-max-width);
     border-radius: calcCornerRadius(1);
     overflow: hidden;
-    margin: 0;
+    box-shadow: $shadow-medium, $shadow-large;
   }
 
   .sv-popup__content,
