--- a/packages/survey-angular-ui/src/components/skeleton/skeleton.component.html
+++ b/packages/survey-angular-ui/src/components/skeleton/skeleton.component.html
@@ -1,3 +1,3 @@
 <ng-template #template>
-  <div class="sv-skeleton-element" [id]="element.id"></div>
+  <div class="sv-skeleton-element" [id]="element.id" [style.height]="element.skeletonHeight"></div>
 </ng-template>
